apply plugin: 'java'
apply plugin: 'eclipse'

version = '1.0.0'
sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile('org.junit.jupiter:junit-jupiter:5.4.2')
    testCompile('org.assertj:assertj-core:3.11.1')
    testCompile('org.mockito:mockito-core:3.6.28')
    testCompile('org.mockito:mockito-junit-jupiter:3.6.28')
}

test {
    useJUnitPlatform()
}
